# ai-invention-6d242d-failure-mode-typed-neural-abduction-stru

./: README.md
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  (+1 more)
round-2/experiment-2/: README.md
round-2/experiment-2/src/: .terminal_claude_agent_struct_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-3/: README.md
round-2/experiment-3/src/: .terminal_claude_agent_struct_out.json  method.py  method_out_schema.json  mini_method_out_schema.json  pyproject.toml
(+4 files in other folders)
