[project]
name = "fmtna-experiment"
version = "0.1.0"
description = "Failure-Mode-Typed Neural Abduction pipeline"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "rank-bm25==0.2.2",
    "scipy==1.17.1",
    "tenacity==9.1.4",
    "tqdm==4.68.2",
    "typing_extensions==4.15.0",
]
